# famfin

./: .gitignore  README.md  famfin.service  install.sh  justfile  package-lock.json
_bmad-output/: workflow-status.md
_bmad-output/brainstorming/: brainstorming-session-2026-03-22-001.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-and-build-pipeline.md  1-2-encrypted-database-and-schema-migrations.md  1-3-session-authentication.md  1-4-pi-3b-deployment-and-systemd-service.md  1-5-code-review-fixes.md  2-1-ml-training-pipeline-and-onnx-model-deployment.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-11.md  prd.md  product-brief-famfin-2026-03-24.md  product-brief-famfin-distillate.md  ux-design-directions.html  ux-design-specification.md
data/: test_transactions.csv
famfin-backend/: .gitignore  AUTH_USAGE.md  Cargo.toml
famfin-backend/.cargo/: config.toml
famfin-backend/migrations/: V1__initial_schema.sql
famfin-backend/src/: lib.rs  main.rs
famfin-backend/src/api/: auth.rs  categories.rs  dashboard.rs  goals.rs  import.rs  ml.rs  mod.rs  transactions.rs
famfin-backend/src/auth/: middleware.rs  mod.rs
famfin-backend/src/db/: connection.rs  mod.rs  queries.rs
famfin-backend/src/ml/: llm.rs  mod.rs  onnx.rs
famfin-backend/tests/: integration_test.rs
famfin-backend/tests/common/: mod.rs
famfin-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
scripts/: train.py
(+26 files in other folders)
